# SLIM-s-AI-Autotrader

./: .gitignore  .mcp.example.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
config/: event-risk.example.json  investment-plan.paper.example.json  risk.paper.example.json  runtime.crypto.example.json  runtime.mixed.example.json  runtime.paper.example.json  strategy.paper.example.json  watchlist.crypto.example.json  watchlist.mixed.example.json  watchlist.paper.example.json
docs/architecture/: operator-dashboard-and-automation.md  system-design.md  system-overview.md
docs/operations/: runbook.md  security-controls.md
docs/research/: alpaca-paper-build-plan.md  investment-plan-ui-patterns.md  published-resources.md  strategy-categories.md
docs/setup/: github-automation-and-pages.md  mcp-onboarding.md
scripts/: build_github_pages.py
src/autotrade/: __init__.py  config.py  main.py  models.py  operator_server.py
src/autotrade/brokers/: alpaca.py  base.py  null.py
src/autotrade/risk/: manager.py
src/autotrade/services/: crypto_stream.py  (+12 more)
tests/: test_config.py  test_crypto_stream.py  test_dashboard.py  test_event_risk.py  test_history.py  test_investment_plan_store.py  test_logging.py  test_main.py  test_operator_overrides.py  test_operator_window_state.py  test_reconciliation.py  test_risk_manager.py  test_runtime_state.py  test_session_lock.py  test_session_report.py  test_trading_loop.py
(+1 files in other folders)
