[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrade"
version = "0.1.0"
description = "Research-first Alpaca paper trading bot scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.28",
  "websockets>=14,<16",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
